機能の追加

--- a/public/bbs.css
+++ b/public/bbs.css
@@ -3,6 +3,12 @@
     margin: 3px;
 }
 
+.id {
+    font-style: italic;
+    color: gray;
+    margin-right: 10px;
+}
+
 .name {
     font-weight: bold;
     width: 8em;
